--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.0",
+    "multer": "^1.4.5-lts.1",
     "ws": "^8.17.0"
   },
   "devDependencies": {
